# S0012E_GroupAssignment

./: .gitignore
engine/: config.h
engine/core/: CMakeLists.txt
engine/core/math/: mat4.h  vec2.h  vec3.h  vec4.h
engine/render/: CMakeLists.txt  window.cc  window.h
projects/: BlinnPhong.glsl  BlinnPhongNormal.glsl  CMakeLists.txt  GLTFinfo.h  Material.h  game.cc  game.h  main.cc  vert.glsl  vertNormal.glsl
projects/Component/: CMakeLists.txt  CameraComp.cc  CameraComp.h  CameraComponent.h  Component.h
projects/Gameobject/: CMakeLists.txt  Camera.cc  Camera.h  CameraObj.h  EnemyAI.cc  EnemyAI.h  GameObj.h  MapGen.h  MapTile.h  Player.cc  Player.h  Sprite.cc  Sprite.h  StaticObj.cc  StaticObj.h
projects/Input/: CMakeLists.txt  GamepadInput.h  Input.h  key_1.cc  key_1.h
projects/Light/: CMakeLists.txt  PointLight.cc  PointLight.h  Sun.cc  Sun.h
projects/Physics/: CMakeLists.txt  Physics.cc  Physics.h
projects/Resource/: CMakeLists.txt  GraphicsNode.cc  GraphicsNode.h  MeshResource.cc  MeshResource.h  Meshresource.cc  Meshresource.h  ShaderResource.cc  ShaderResource.h  TextureResource.cc  TextureResource.h
projects/World/: CMakeLists.txt  Pathfinding.h  ResourceManager.h  Scene.h  SpawnGen.h  UserInterface.cc  UserInterface.h
